# cutlist

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
acceptance/: EVIDENCE.md  run_scenarios.py  scenarios.md  test_acceptance.py
examples/: README.md  frameio_comments.csv  notes.txt  run_cutlist.py
src/cutlist/: __init__.py  cli.py  edl_export.py  extract.py  ingest.py  models.py  otio_export.py  timecode.py
tests/: conftest.py  test_cli.py  test_edl_export.py  test_extract.py  test_ingest.py  test_models.py  test_otio_export.py  test_timecode.py
